// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CsvFormatter > should convert to csv excluding crypto amount 1`] = `
"ID,Date & Time,Sender,Recipient,Fiat Amount [USD],Fiat Fee [USD],Fiat Total [USD],Rate
2dc489ca6683b7c2bc380165204e3a291c66b0648dbc43a04e76b6d130e5cb5f,13.03.2025 15,0x93485b57ff3DeD81430D08579142fAe8234c6A17,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,0,0,0,0
2c0e9cb5f377847502246b6b32d8c106ae1b389bbcfd27cc85de6a744b9d4364,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Other,0,0,0,0
11701c71669f2b845492f4a95e3bde60fd5fa9ee797f2f56f12820bce39d2e22,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Other,0,0,0,0
1e6860facc12f6e70ba1d8af193642590aa17326b410f2b8f60dc1d2cccc4b30,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Other,0,0,0,0
e9ba7e89a5bd094fc0ccee3fdf5c12bac8e011d5e5915cdddaf2b37e4bb01e2e,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Other,0,0,0,0
f40aa73e55716cb8d8ef889132250d6f155fbb94fa7991a55739ffe58ea68fb2,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Vote Transaction,0,0,0,0
45117603947dc51f6465eed3690b0937b2c1ce4d8826160e508e6b4489cf880e,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Vote Transaction,0,0,0,0
d1dc3f92abd9f25d3bea7927cc28664e091394690bd5b600eb774050da0450c5,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,0x93485b57ff3DeD81430D08579142fAe8234c6A17,0,0,0,0
8f26a1983e22e87054244d65ac675dde891ef0bd2454768209fbbfe5ad95cacc,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Multiple (2),0,0,0,0
11051f5fdeb68d8d3692d87ad1e53435f88a197407b615cee348c1bf0a1628f8,13.03.2025 15,0x659A76be283644AEc2003aa8ba26485047fd1BFB,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,0,0,0,0"
`;

exports[`CsvFormatter > should convert to csv excluding date 1`] = `
"ID,Sender,Recipient,Amount,Fee,Total,Fiat Amount [USD],Fiat Fee [USD],Fiat Total [USD],Rate
2dc489ca6683b7c2bc380165204e3a291c66b0648dbc43a04e76b6d130e5cb5f,0x93485b57ff3DeD81430D08579142fAe8234c6A17,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,2,0,2,0,0,0,0
2c0e9cb5f377847502246b6b32d8c106ae1b389bbcfd27cc85de6a744b9d4364,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Other,0,-0.0025404579555,-0.00254046,0,0,0,0
11701c71669f2b845492f4a95e3bde60fd5fa9ee797f2f56f12820bce39d2e22,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Other,0,-0.001,-0.001,0,0,0,0
1e6860facc12f6e70ba1d8af193642590aa17326b410f2b8f60dc1d2cccc4b30,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Other,0,-0.001,-0.001,0,0,0,0
e9ba7e89a5bd094fc0ccee3fdf5c12bac8e011d5e5915cdddaf2b37e4bb01e2e,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Other,0,-0.001,-0.001,0,0,0,0
f40aa73e55716cb8d8ef889132250d6f155fbb94fa7991a55739ffe58ea68fb2,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Vote Transaction,0,-0.001,-0.001,0,0,0,0
45117603947dc51f6465eed3690b0937b2c1ce4d8826160e508e6b4489cf880e,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Vote Transaction,0,-0.001,-0.001,0,0,0,0
d1dc3f92abd9f25d3bea7927cc28664e091394690bd5b600eb774050da0450c5,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,0x93485b57ff3DeD81430D08579142fAe8234c6A17,-0.2,-0.000105,-0.200105,0,0,0,0
8f26a1983e22e87054244d65ac675dde891ef0bd2454768209fbbfe5ad95cacc,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Multiple (2),-1.5,-0.0010285261064,-1.50102853,0,0,0,0
11051f5fdeb68d8d3692d87ad1e53435f88a197407b615cee348c1bf0a1628f8,0x659A76be283644AEc2003aa8ba26485047fd1BFB,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,4.98,0,4.98,0,0,0,0"
`;

exports[`CsvFormatter > should convert to csv excluding fiat amount 1`] = `
"ID,Date & Time,Sender,Recipient,Amount,Fee,Total
2dc489ca6683b7c2bc380165204e3a291c66b0648dbc43a04e76b6d130e5cb5f,13.03.2025 15,0x93485b57ff3DeD81430D08579142fAe8234c6A17,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,2,0,2
2c0e9cb5f377847502246b6b32d8c106ae1b389bbcfd27cc85de6a744b9d4364,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Other,0,-0.0025404579555,-0.00254046
11701c71669f2b845492f4a95e3bde60fd5fa9ee797f2f56f12820bce39d2e22,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Other,0,-0.001,-0.001
1e6860facc12f6e70ba1d8af193642590aa17326b410f2b8f60dc1d2cccc4b30,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Other,0,-0.001,-0.001
e9ba7e89a5bd094fc0ccee3fdf5c12bac8e011d5e5915cdddaf2b37e4bb01e2e,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Other,0,-0.001,-0.001
f40aa73e55716cb8d8ef889132250d6f155fbb94fa7991a55739ffe58ea68fb2,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Vote Transaction,0,-0.001,-0.001
45117603947dc51f6465eed3690b0937b2c1ce4d8826160e508e6b4489cf880e,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Vote Transaction,0,-0.001,-0.001
d1dc3f92abd9f25d3bea7927cc28664e091394690bd5b600eb774050da0450c5,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,0x93485b57ff3DeD81430D08579142fAe8234c6A17,-0.2,-0.000105,-0.200105
8f26a1983e22e87054244d65ac675dde891ef0bd2454768209fbbfe5ad95cacc,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Multiple (2),-1.5,-0.0010285261064,-1.50102853
11051f5fdeb68d8d3692d87ad1e53435f88a197407b615cee348c1bf0a1628f8,13.03.2025 15,0x659A76be283644AEc2003aa8ba26485047fd1BFB,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,4.98,0,4.98"
`;

exports[`CsvFormatter > should convert to csv excluding header row 1`] = `
"2dc489ca6683b7c2bc380165204e3a291c66b0648dbc43a04e76b6d130e5cb5f,13.03.2025 15,0x93485b57ff3DeD81430D08579142fAe8234c6A17,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,2,0,2,0,0,0,0
2c0e9cb5f377847502246b6b32d8c106ae1b389bbcfd27cc85de6a744b9d4364,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Other,0,-0.0025404579555,-0.00254046,0,0,0,0
11701c71669f2b845492f4a95e3bde60fd5fa9ee797f2f56f12820bce39d2e22,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Other,0,-0.001,-0.001,0,0,0,0
1e6860facc12f6e70ba1d8af193642590aa17326b410f2b8f60dc1d2cccc4b30,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Other,0,-0.001,-0.001,0,0,0,0
e9ba7e89a5bd094fc0ccee3fdf5c12bac8e011d5e5915cdddaf2b37e4bb01e2e,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Other,0,-0.001,-0.001,0,0,0,0
f40aa73e55716cb8d8ef889132250d6f155fbb94fa7991a55739ffe58ea68fb2,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Vote Transaction,0,-0.001,-0.001,0,0,0,0
45117603947dc51f6465eed3690b0937b2c1ce4d8826160e508e6b4489cf880e,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Vote Transaction,0,-0.001,-0.001,0,0,0,0
d1dc3f92abd9f25d3bea7927cc28664e091394690bd5b600eb774050da0450c5,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,0x93485b57ff3DeD81430D08579142fAe8234c6A17,-0.2,-0.000105,-0.200105,0,0,0,0
8f26a1983e22e87054244d65ac675dde891ef0bd2454768209fbbfe5ad95cacc,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Multiple (2),-1.5,-0.0010285261064,-1.50102853,0,0,0,0
11051f5fdeb68d8d3692d87ad1e53435f88a197407b615cee348c1bf0a1628f8,13.03.2025 15,0x659A76be283644AEc2003aa8ba26485047fd1BFB,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,4.98,0,4.98,0,0,0,0"
`;

exports[`CsvFormatter > should convert to csv excluding sender and recipient 1`] = `
"ID,Date & Time,Amount,Fee,Total,Fiat Amount [USD],Fiat Fee [USD],Fiat Total [USD],Rate
2dc489ca6683b7c2bc380165204e3a291c66b0648dbc43a04e76b6d130e5cb5f,13.03.2025 15,2,0,2,0,0,0,0
2c0e9cb5f377847502246b6b32d8c106ae1b389bbcfd27cc85de6a744b9d4364,13.03.2025 15,0,-0.0025404579555,-0.00254046,0,0,0,0
11701c71669f2b845492f4a95e3bde60fd5fa9ee797f2f56f12820bce39d2e22,13.03.2025 15,0,-0.001,-0.001,0,0,0,0
1e6860facc12f6e70ba1d8af193642590aa17326b410f2b8f60dc1d2cccc4b30,13.03.2025 15,0,-0.001,-0.001,0,0,0,0
e9ba7e89a5bd094fc0ccee3fdf5c12bac8e011d5e5915cdddaf2b37e4bb01e2e,13.03.2025 15,0,-0.001,-0.001,0,0,0,0
f40aa73e55716cb8d8ef889132250d6f155fbb94fa7991a55739ffe58ea68fb2,13.03.2025 15,0,-0.001,-0.001,0,0,0,0
45117603947dc51f6465eed3690b0937b2c1ce4d8826160e508e6b4489cf880e,13.03.2025 15,0,-0.001,-0.001,0,0,0,0
d1dc3f92abd9f25d3bea7927cc28664e091394690bd5b600eb774050da0450c5,13.03.2025 15,-0.2,-0.000105,-0.200105,0,0,0,0
8f26a1983e22e87054244d65ac675dde891ef0bd2454768209fbbfe5ad95cacc,13.03.2025 15,-1.5,-0.0010285261064,-1.50102853,0,0,0,0
11051f5fdeb68d8d3692d87ad1e53435f88a197407b615cee348c1bf0a1628f8,13.03.2025 15,4.98,0,4.98,0,0,0,0"
`;

exports[`CsvFormatter > should convert to csv excluding transation id 1`] = `
"Date & Time,Sender,Recipient,Amount,Fee,Total,Fiat Amount [USD],Fiat Fee [USD],Fiat Total [USD],Rate
13.03.2025 15,0x93485b57ff3DeD81430D08579142fAe8234c6A17,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,2,0,2,0,0,0,0
13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Other,0,-0.0025404579555,-0.00254046,0,0,0,0
13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Other,0,-0.001,-0.001,0,0,0,0
13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Other,0,-0.001,-0.001,0,0,0,0
13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Other,0,-0.001,-0.001,0,0,0,0
13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Vote Transaction,0,-0.001,-0.001,0,0,0,0
13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Vote Transaction,0,-0.001,-0.001,0,0,0,0
13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,0x93485b57ff3DeD81430D08579142fAe8234c6A17,-0.2,-0.000105,-0.200105,0,0,0,0
13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Multiple (2),-1.5,-0.0010285261064,-1.50102853,0,0,0,0
13.03.2025 15,0x659A76be283644AEc2003aa8ba26485047fd1BFB,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,4.98,0,4.98,0,0,0,0"
`;

exports[`CsvFormatter > should convert to csv including header row 1`] = `
"ID,Date & Time,Sender,Recipient,Amount,Fee,Total,Fiat Amount [USD],Fiat Fee [USD],Fiat Total [USD],Rate
2dc489ca6683b7c2bc380165204e3a291c66b0648dbc43a04e76b6d130e5cb5f,13.03.2025 15,0x93485b57ff3DeD81430D08579142fAe8234c6A17,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,2,0,2,0,0,0,0
2c0e9cb5f377847502246b6b32d8c106ae1b389bbcfd27cc85de6a744b9d4364,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Other,0,-0.0025404579555,-0.00254046,0,0,0,0
11701c71669f2b845492f4a95e3bde60fd5fa9ee797f2f56f12820bce39d2e22,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Other,0,-0.001,-0.001,0,0,0,0
1e6860facc12f6e70ba1d8af193642590aa17326b410f2b8f60dc1d2cccc4b30,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Other,0,-0.001,-0.001,0,0,0,0
e9ba7e89a5bd094fc0ccee3fdf5c12bac8e011d5e5915cdddaf2b37e4bb01e2e,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Other,0,-0.001,-0.001,0,0,0,0
f40aa73e55716cb8d8ef889132250d6f155fbb94fa7991a55739ffe58ea68fb2,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Vote Transaction,0,-0.001,-0.001,0,0,0,0
45117603947dc51f6465eed3690b0937b2c1ce4d8826160e508e6b4489cf880e,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Vote Transaction,0,-0.001,-0.001,0,0,0,0
d1dc3f92abd9f25d3bea7927cc28664e091394690bd5b600eb774050da0450c5,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,0x93485b57ff3DeD81430D08579142fAe8234c6A17,-0.2,-0.000105,-0.200105,0,0,0,0
8f26a1983e22e87054244d65ac675dde891ef0bd2454768209fbbfe5ad95cacc,13.03.2025 15,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,Multiple (2),-1.5,-0.0010285261064,-1.50102853,0,0,0,0
11051f5fdeb68d8d3692d87ad1e53435f88a197407b615cee348c1bf0a1628f8,13.03.2025 15,0x659A76be283644AEc2003aa8ba26485047fd1BFB,0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6,4.98,0,4.98,0,0,0,0"
`;

exports[`CsvFormatter > should convert to csv using semicolon delimiter 1`] = `
"ID;Date & Time;Sender;Recipient;Amount;Fee;Total;Fiat Amount [USD];Fiat Fee [USD];Fiat Total [USD];Rate
2dc489ca6683b7c2bc380165204e3a291c66b0648dbc43a04e76b6d130e5cb5f;13.03.2025 15;0x93485b57ff3DeD81430D08579142fAe8234c6A17;0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6;2;0;2;0;0;0;0
2c0e9cb5f377847502246b6b32d8c106ae1b389bbcfd27cc85de6a744b9d4364;13.03.2025 15;0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6;Other;0;-0.0025404579555;-0.00254046;0;0;0;0
11701c71669f2b845492f4a95e3bde60fd5fa9ee797f2f56f12820bce39d2e22;13.03.2025 15;0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6;Other;0;-0.001;-0.001;0;0;0;0
1e6860facc12f6e70ba1d8af193642590aa17326b410f2b8f60dc1d2cccc4b30;13.03.2025 15;0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6;Other;0;-0.001;-0.001;0;0;0;0
e9ba7e89a5bd094fc0ccee3fdf5c12bac8e011d5e5915cdddaf2b37e4bb01e2e;13.03.2025 15;0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6;Other;0;-0.001;-0.001;0;0;0;0
f40aa73e55716cb8d8ef889132250d6f155fbb94fa7991a55739ffe58ea68fb2;13.03.2025 15;0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6;Vote Transaction;0;-0.001;-0.001;0;0;0;0
45117603947dc51f6465eed3690b0937b2c1ce4d8826160e508e6b4489cf880e;13.03.2025 15;0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6;Vote Transaction;0;-0.001;-0.001;0;0;0;0
d1dc3f92abd9f25d3bea7927cc28664e091394690bd5b600eb774050da0450c5;13.03.2025 15;0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6;0x93485b57ff3DeD81430D08579142fAe8234c6A17;-0.2;-0.000105;-0.200105;0;0;0;0
8f26a1983e22e87054244d65ac675dde891ef0bd2454768209fbbfe5ad95cacc;13.03.2025 15;0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6;Multiple (2);-1.5;-0.0010285261064;-1.50102853;0;0;0;0
11051f5fdeb68d8d3692d87ad1e53435f88a197407b615cee348c1bf0a1628f8;13.03.2025 15;0x659A76be283644AEc2003aa8ba26485047fd1BFB;0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6;4.98;0;4.98;0;0;0;0"
`;
